feat(api) Ruangan Role
