# routes/api.php
@@ -6,6 +6,8 @@ use App\Http\Controllers\Api\TestController;
 use App\Http\Controllers\Api\AuthController;
 use App\Http\Controllers\Api\KelolaPengguna;
 use App\Http\Controllers\Api\KelolaRole;
+use App\Http\Controllers\Api\KelolaRuangan;
+use App\Http\Controllers\Api\KelolaRuanganRole;
 /*
 |--------------------------------------------------------------------------
 | API Routes
@@ -33,12 +35,22 @@ Route::group(['middleware' => ['auth.refresh.api', 'role.api:Admin']], function 
     Route::get('/kelola-pengguna/{id}', [KelolaPengguna::class, 'detail']);
     Route::post('/kelola-pengguna/create', [KelolaPengguna::class, 'create']);
     Route::delete('/kelola-pengguna/{id}', [KelolaPengguna::class, 'delete']);
-});
-
-Route::group(['middleware' => ['auth.refresh.api', 'role.api:Admin']], function () {
+    
     Route::post('/kelola-role', [KelolaRole::class, 'list']);
     Route::put('/kelola-role/{id}', [KelolaRole::class, 'update']);
     Route::get('/kelola-role/{id}', [KelolaRole::class, 'detail']);
     Route::post('/kelola-role/create', [KelolaRole::class, 'create']);
     Route::delete('/kelola-role/{id}', [KelolaRole::class, 'delete']);
+
+    Route::post('/kelola-ruangan', [KelolaRuangan::class, 'list']);
+    Route::put('/kelola-ruangan/{id}', [KelolaRuangan::class, 'update']);
+    Route::get('/kelola-ruangan/{id}', [KelolaRuangan::class, 'detail']);
+    Route::post('/kelola-ruangan/create', [KelolaRuangan::class, 'create']);
+    Route::delete('/kelola-ruangan/{id}', [KelolaRuangan::class, 'delete']);
+
+    Route::post('/kelola-ruangan-role', [KelolaRuanganRole::class, 'list']);
+    Route::put('/kelola-ruangan-role/{id}', [KelolaRuanganRole::class, 'update']);
+    Route::get('/kelola-ruangan-role/{id}', [KelolaRuanganRole::class, 'detail']);
+    Route::post('/kelola-ruangan-role/create', [KelolaRuanganRole::class, 'create']);
+    Route::delete('/kelola-ruangan-role/{id}', [KelolaRuanganRole::class, 'delete']);
 });
